# honor-code

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt
include/honor_code/: engine.h  languages.h  tokenizer.h  tokens.h
lib/: CMakeLists.txt
lib/tokenizer/: CMakeLists.txt  changes.txt
lib/tokenizer/src/: .gitignore  Keyword.h  Makefile  Token.h  TokenizerBase.h
src/: CMakeLists.txt  main.cpp  tokenizer.cpp  winnowing.cpp  winnowing.h
